--- a/src/css/options.css
+++ b/src/css/options.css
@@ -1,7 +1,17 @@
-@import url("bootstrap/dist/css/bootstrap.css");
+@import url("bootswatch/dist/cyborg/bootstrap.min.css");
 
 body {
   font-size: 80%;
+}
+
+#button {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+
 }
 
 button {
