Added Twitch badges and leveling/xp system

--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -14,6 +14,16 @@ body {
 
 }
 
+.container {
+  width: 80%; /* Full width */
+  background-color: #ddd; /* Grey background */
+}
+.skills {
+  text-align: right; /* Right-align text */
+  padding-top: 10px; /* Add top padding */
+  padding-bottom: 10px; /* Add bottom padding */
+  color: white; /* White text color */
+}
 
 
 
