--- a/src/css/options.css
+++ b/src/css/options.css
@@ -1,42 +1,35 @@
-@import url("bootswatch/dist/cyborg/bootstrap.min.css"); 
-/*@import url("bootstrap/dist/css/bootstrap.min.css"); */
+@import url("bootswatch/dist/cyborg/bootstrap.min.css");
+
+/* @import url("bootstrap/dist/css/bootstrap.min.css"); */
 
 body {
   font-size: 80%;
-  background-color: rgb(53, 53, 53)
+  background-color: rgb(53, 53, 53);
 }
-
-
-
 
 .carousel-control-prev-icon,
 .carousel-control-next-icon {
   height: 20px;
   width: 20px;
-  color:black;
+  color: black;
   background-size: 100%, 100%;
   border-radius: 50%;
   font-size: 55px;
-
-
-
 }
 
-
-
-
-.heart-shape:before{
+.heart-shape::before {
   color: rgb(194, 194, 194);
   opacity: 30%;
-	content: "\2764";
-	font-size: 3em;
-	position: fixed;
+  content: "\2764";
+  font-size: 3em;
+  position: fixed;
   right: 0.3em;
   bottom: 0;
   transition: 0.3s;
   cursor: pointer;
 }
-.heart-shape:hover:before{
+
+.heart-shape:hover::before {
   color: rgb(255, 54, 54);
   opacity: 100%;
 }
@@ -46,13 +39,14 @@ body {
   float: none; /* Added */
   margin-bottom: 10px; /* Added */
 }
+
 .carousel {
   margin: 0 auto;
   float: none;
   margin-bottom: 10px;
 }
 
-.centered{
+.centered {
   display: flex;
   justify-content: center;
   margin-top: 31px;
@@ -60,7 +54,7 @@ body {
 }
 
 h4 {
-  padding:5px;
+  padding: 5px;
 }
 
 .center {
