--- a/src/css/options.css
+++ b/src/css/options.css
@@ -58,8 +58,10 @@ h4 {
 }
 
 .center {
-  margin: auto;
-  width: 50%;
-  border: 3px solid green;
-  padding: 10px;
+  padding-top: 10px;
+  margin: 0;
+  position: absolute;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
